--- a/ShareRun/Info.plist
+++ b/ShareRun/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>UIUserInterfaceStyle</key>
+    <string>Light</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>달리기를 기록하기 위해 백그라운드에서도 위치 정보가 필요합니다.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
