--- a/ShareRun/Info.plist
+++ b/ShareRun/Info.plist
@@ -4,6 +4,10 @@
 <dict>
     <key>UIUserInterfaceStyle</key>
     <string>Light</string>
+    <key>NSHealthShareUsageDescription</key>
+    <string>BPM을 측정하기 위해 건강 정보가 필요합니다.</string>
+    <key>NSHealthUpdateUsageDescription</key>
+    <string>BPM을 측정하기 위해 건강 정보가 필요합니다.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>달리기를 기록하기 위해 백그라운드에서도 위치 정보가 필요합니다.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
